<resources>
    <string name="app_name">ITIGraduationProject</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password"> Password </string>
    <string name="confirm_prompt_password">Confirm Password </string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="name">Name</string>
    <string name="phone">Mobile</string>
    <string name="login_btn_str">Login</string>
    <string name="SignUp">SignUp</string>
    <string name="national_id">National Id</string>
    <string name="Date">Select Birth Date</string>
    <string name="radio_Passenger">User</string>
    <string name="radio_Driver">Driver</string>
    <string name="male">Male</string>
    <string name="gender">Gender</string>
    <string name="famle">Female</string>
    <string name="registerType">Female</string>
    <string name="goLogin">Already a member?Login</string>
    <string name="CarInfo">Please Enter Car Information</string>
    <string name="car_owner_name">Please Enter Car Owner Name</string>
    <string name="car_plate">Please Enter Car plate  </string>
    <string name="address">Please Enter Car Owner Address</string>
    <string name="CarBrand">Please Enter Car Brand</string>
    <string name="linceEndDate">Please Enter Linces End Date</string>
    <string name="carModel">Please Enter Car Model </string>
    <string name="modelcaryear">Please Enter Car Model Year</string>
    <string name="carcolor">Please Enter Car Color</string>
    <string name="carcc">Please Enter Car CC</string>
    <string name="driveRegister">Complete Register</string>
    <string name="Register">Register</string>
    <string name="login">Login</string>
    <string name="date">BirthDate</string>
    <string name="hint_data">No account yet? Create one</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="user_profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="JoinTrip">Join Trip</string>
    <string name="numOfSeats">number Of Seats</string>
    <string name="TimeTrip">Time Trip</string>
    <string name="destinationTrip">To</string>
    <string name="SourceTrip">From</string>
    <string name="TripName">TripName</string>
    <string name="driverdetails">Driver Details</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="Search">Search</string>
    <string name="cost">trip coast</string>
    <string name="title_activity_details_of_event">DetailsOfEvent</string>
    <string name="title_activity_driver_home">Home</string>
    <string name="title_activity_home_driver">Home</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_activity_create_trip">CreateTrip</string>
    <string name="title_activity_trip_details_for_driver">Trip Details</string>
    <string name="title_activity_details_of_event_for_user">Trip Information</string>
    <string name="title_activity_view_reserved_users">Reserved Users</string>
    <string name="title_activity_view_reserved_user_details">User Information</string>
    <string name="title_activity_past_trip_for_driver">PastTrips</string>
    <string name="driverInfo">Driver Information</string>
    <string name="tripInformation">Trip Information</string>
    <string name="showTrips">Trips</string>
    <string name="TripSearch">Find Trip </string>
    <string name="IncomingTrip">Incoming Trips</string>
    <string name="TripDetails">Trip Information</string>
    <string name="PastTrip">Past Trips</string>
    <string name="carcolorstr">Car Color</string>
    <string name="carmodelstr">Car Model</string>
    <string name="carLincesDate">Car Linces End Date</string>
    <string name="carBrandStr">Car Brand</string>
    <string name="Carccstr">Car CC </string>
    <string name="CarPlatestr">Car Plate</string>
    <string name="carOwnerAddress">Car Owner Address</string>
    <string name="carOwnerName">Car Owner Name</string>
    <string name="SearchTrip">SearchTrip</string>
    <string name="startBtn">Start</string>
    <string name="canceleDialogeBtn">Cancel</string>
    <string name="yourTripMeesage">Your Trip </string>
    <string name="RideSharing"> Travel With Me </string>
    <string name="date1">Date</string>
    <string name="time">Time</string>
    <string name="Seatsnumber">Seats number</string>
    <string name="TripTime">Trip Time</string>
    <string name="TripTo">Trip To</string>Trip To
    <string name="TripFrom">Trip From</string>
    <string name="TripDetail">Trip Details</string>
    <string name="TripDay">Trip Day</string>
    <string name="removeuser">Remove From Trip</string>
    <string name="singup">Sing Up</string>
    <string name="search">Search</string>
    <color name="red">#ff0000</color>
    <color name="white">#ffff</color>
    <color name="blue">#333366</color>
    <color name="orange">#FF9933</color>
    <color name="grey">#E8E8E8</color>
    <color name="violet">#660066</color>
    <color name="purple">#efbbff</color>#2e0029
    <color name="mov">#8b0a50</color>


</resources>
