<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/driverincomingTrip"
            android:title="@string/IncomingTrip"
            android:icon="@drawable/incomingtrip"
           />
        <item
            android:id="@+id/deriverPastTrip"
            android:title="@string/PastTrip"
            android:icon="@drawable/pasttrip" />

        <item
            android:id="@+id/deriverprofile"
            android:title="@string/user_profile"
            android:icon="@drawable/profilepicture"/>
        <item
            android:id="@+id/deriverlogout"
            android:title="@string/logout"
            android:icon="@drawable/logout"

            />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>

</menu>
