<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DriverProfile">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>
        <de.hdodenhof.circleimageview.CircleImageView
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/profile_image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:src="@drawable/email"
            app:civ_border_color="@color/red"
            app:civ_border_width="3dp" />
        <TextView
            android:id="@+id/driverNameProf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/driverNameProfEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:editable="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:enabled="false"
            android:inputType="textPersonName"
            android:paddingLeft="20dp" />
        <TextView
            android:id="@+id/driverEmailProf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_email"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/driverEmailProfEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:clickable="false"
            android:enabled="false"
            android:focusableInTouchMode="false"
            android:inputType="none"
            android:editable="false" />
        <TextView
            android:id="@+id/driverphone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/driverphoneEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="10"
            android:inputType="none"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/drivernationalIdProf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/national_id"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/drivernationalIdProfEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:editable="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:enabled="false"
            android:ems="10"
            android:inputType="none"
            android:paddingLeft="20dp"
            />
        <TextView
            android:id="@+id/drivergender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/drivergenderEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/driverdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/driverdateEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/driverCarOwnerName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carOwnerName"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/driverCarOwnerNameEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/driverCarOwneraddress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carOwnerAddress"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/driverCarOwneraddressEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/Carplate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/CarPlatestr"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/CarplateEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/CarModl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carmodelstr"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/CarModlEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/deriverCarColor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carcolorstr"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/driverCarcolorEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/CarendlinceDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carLincesDate"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/CarendlinceDateEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/Carbrand"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/carBrandStr"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/CarbrandEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/CarCC"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Carccstr"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/driverCarCCEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>



    </GridLayout>

</ScrollView>