<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Profile">
    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:columnCount="2"
        android:rowCount="2"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true">
    <TextView
        android:id="@+id/userNameProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/userNameProfEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:editable="false"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:enabled="false"
        android:inputType="textPersonName"
        android:paddingLeft="20dp" />
    <TextView
        android:id="@+id/userEmailProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_email"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/userEmailProfEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:clickable="false"
        android:enabled="false"
        android:focusableInTouchMode="false"
        android:inputType="none"
        android:editable="false" />
    <TextView
        android:id="@+id/phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/phoneEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:ems="10"
        android:inputType="none"
        android:editable="false"
        android:enabled="false"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:paddingLeft="20dp"/>
    <TextView
        android:id="@+id/nationalIdProf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/national_id"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/nationalIdProfEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:editable="false"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:enabled="false"
        android:ems="10"
        android:inputType="none"
        android:paddingLeft="20dp"
        />
    <TextView
        android:id="@+id/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gender"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="20dp"/>

    <EditText
        android:id="@+id/genderEdt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:editable="false"
        android:enabled="false"
        android:clickable="false"
        android:focusableInTouchMode="false"
        android:paddingLeft="20dp"/>
        <TextView
            android:id="@+id/date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="20dp"/>

        <EditText
            android:id="@+id/dateEdt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:editable="false"
            android:enabled="false"
            android:clickable="false"
            android:focusableInTouchMode="false"
            android:paddingLeft="20dp"/>

    </GridLayout>



</ScrollView>